Ajout pages / fonts

--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@ Description: Thème créé dans le cadre d'un examen.
 Requires at least: WordPress 5.0
 Version: 1.0
 */
+.menu {
+    position: fixed;
+    top: 0px;
+}
+
+.admin-bar .menu {
+	top: 32px; /* on prend en compte le décalage */
+}
