--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ a {
 }
 
 section,
-body:not(.home):not(.formation-simple) main {
+body:not(.home):not(.single-formations) main {
     padding-top: 4rem;
     padding-bottom: 4rem;
 }
